Fix cpu speed/max reading in UI

--- a/Web/Monitrix/src/Components/Pages/Home.razor
+++ b/Web/Monitrix/src/Components/Pages/Home.razor
@@ -71,6 +71,11 @@
                                 <MudText Typo="Typo.body2" Style="font-weight: 500;">Threads:</MudText>
                                 <MudText Typo="Typo.body2">@_cpuSnapshot.CpuInfo.ThreadCount</MudText>
                             </div>
+
+                            <div class="d-flex justify-space-between">
+                                <MudText Typo="Typo.body2" Style="font-weight: 500;">Max Speed:</MudText>
+                                <MudText Typo="Typo.body2">@_cpuSnapshot.CpuInfo.CpuSpeedMhz</MudText>
+                            </div>
                         </MudStack>
                     </MudStack>
                     
